--- a/core/res/res/values/lineage_symbols.xml
+++ b/core/res/res/values/lineage_symbols.xml
@@ -39,4 +39,23 @@
     <!-- Button backlight -->
     <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
     <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
+
+    <!-- Power menu -->
+    <java-symbol type="array" name="shutdown_reboot_options" />
+    <java-symbol type="array" name="shutdown_reboot_actions" />
+
+    <java-symbol type="drawable" name="ic_lock_airplane_mode_disabled" />
+    <java-symbol type="drawable" name="ic_lock_airplane_mode_enabled" />
+    <java-symbol type="drawable" name="ic_lock_screenshot" />
+    <java-symbol type="drawable" name="ic_lock_user" />
+
+    <java-symbol type="string" name="global_action_screenshot" />
+    <java-symbol type="string" name="global_action_current_user" />
+
+    <java-symbol type="dimen" name="global_actions_avatar_size" />
+
+    <!-- Advanced reboot -->
+    <java-symbol type="string" name="reboot_title" />
+    <java-symbol type="string" name="reboot_confirm" />
+    <java-symbol type="string" name="reboot_progress" />
 </resources>
